# ci-demo

./: .gitignore  CREDENTIALS_CONFIGURATION.md  Makefile.am  README.md  TIMEOUT_FEATURE.md  USERGUIDE.md  configure.ac  meson.build
.ci/: Dockerfile.centos7.7.1908  Dockerfile.rhel8-6  Dockerfile.ubuntu16-4  Dockerfile.ubuntu18-4  Dockerfile.ubuntu24-04  Jenkinsfile  Jenkinsfile.shlib  Makefile  build_package.sh  buildrpm.sh  check_package.sh  cidemo-k8.py  copyright-check-ignore.txt  copyright-check-map.yaml  cov.sh  doit.sh  job_matrix.yaml  job_matrix_advanced.yaml  job_matrix_basic.yaml  job_matrix_ck.yaml  job_matrix_debug.yaml  job_matrix_gha.yaml  job_matrix_gha_k8.yaml  proj_jjb.yaml  proj_jjb_helloworld.yaml  runtests.sh  test-pod.yaml
.ci/examples/: job_matrix_actions.yaml  job_matrix_agents.yaml  job_matrix_agents_and_k8.yaml  job_matrix_agents_and_k8_mix.yaml  job_matrix_antivirus.yaml  job_matrix_containerSelector.yaml  job_matrix_env.yaml  job_matrix_filters.yaml  job_matrix_gitlab.yaml  job_matrix_hostipc.yaml  job_matrix_kubernetes_advanced.yaml  job_matrix_nvbugs.yaml  job_matrix_onfail.yaml  job_matrix_slurm.yaml  job_matrix_slurm_k8.yaml  job_matrix_stages.yaml  (+10 more)
.github/: Dockerfile.jenkins  jenkins-job-config.xml
docs/: RUNS_ON_DOCKERS.md
schema_validator/: Dockerfile  build_and_push_containet.sh  ci_demo_schema.yaml  ci_demo_yaml_validator.py
scripts/: local_gha_ci.sh
src/: Makefile.am
vars/: antivirusCI.groovy  blackDuck.groovy  dynamicAction.groovy  gitlabStatus.groovy  groovy.groovy  ngci.groovy  nvbugs.groovy  slurmCI.groovy
(+22 files in other folders)
